year range graph is now available to edit custom year, graph overlap fixed; graph color changed to fit with green theme

--- a/visualization_page/assets/css/style.css
+++ b/visualization_page/assets/css/style.css
@@ -140,9 +140,9 @@ body::-webkit-scrollbar-thumb {
     top: 33px;
 }
 
-.year-start-input, .year-end-input {
+/* .year-start-input, .year-end-input {
     pointer-events: none;
-}
+} */
 
 .year-range-data {
     border: none;
